--- a/padogrid-mqtt/pom.xml
+++ b/padogrid-mqtt/pom.xml
@@ -23,7 +23,7 @@
 	<parent>
 		<groupId>padogrid.addon</groupId>
 		<artifactId>padogrid-parent</artifactId>
-		<version>0.9.29-FEATURE</version>
+		<version>0.9.30-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>padogrid-mqtt</artifactId>
