--- a/hazelcast-addon-core-4/pom.xml
+++ b/hazelcast-addon-core-4/pom.xml
@@ -23,7 +23,7 @@
 	<parent>
 		<groupId>padogrid.addon</groupId>
 		<artifactId>padogrid-parent</artifactId>
-		<version>0.9.30-SNAPSHOT</version>
+		<version>0.9.30</version>
 	</parent>
 	<artifactId>hazelcast-addon-core-4</artifactId>
 	<packaging>jar</packaging>
