Added playground in Kubernetes yaml

--- a/padogrid-deployment/src/main/resources/common/k8s/padogrid.yaml
+++ b/padogrid-deployment/src/main/resources/common/k8s/padogrid.yaml
@@ -65,6 +65,8 @@ spec:
           containerPort: 9090
         - name: grafana
           containerPort: 3000
+        - name: playground
+          containerPort: 5006
         volumeMounts:
         - mountPath: /opt/padogrid/workspaces
           name: padogrid-mount
@@ -115,3 +117,7 @@ spec:
     protocol: TCP
     port: 3000
     targetPort: grafana
+  - name: playground
+    protocol: TCP
+    port: 5006
+    targetPort: playground
