--- a/pom.xml
+++ b/pom.xml
@@ -33,11 +33,12 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<padogrid.version>${project.version}</padogrid.version>
-		<geode.version>1.14.4</geode.version>
+		<geode.version>1.15.1</geode.version>
 		<log4j2.version>2.19.0</log4j2.version>
 		<paho.version>1.2.5</paho.version>
 		<snake.version>1.23</snake.version>
 		<json.version>20230227</json.version>
+		<avro.version>1.11.3</avro.version>
 		<bouncycastle.version>1.74</bouncycastle.version>
 		<maven.jar.plugin.version>3.3.0</maven.jar.plugin.version>
 		<maven.javadoc.plugin.version>3.1.0</maven.javadoc.plugin.version>
