--- a/padogrid-all/padogrid-geode-all/pom.xml
+++ b/padogrid-all/padogrid-geode-all/pom.xml
@@ -36,9 +36,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<geode.version>1.14.2</geode.version>
 		<spring.version>5.2.1.RELEASE</spring.version>
-		<avro.version>1.9.2</avro.version>
 		<skipTests>true</skipTests>
 	</properties>
 
@@ -192,7 +190,7 @@
 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
-			<version>20200518</version>
+			<version>${json.version}</version>
 		</dependency>
 	</dependencies>
 
