--- a/padogrid-all/padogrid-hazelcast-all-4/pom.xml
+++ b/padogrid-all/padogrid-hazelcast-all-4/pom.xml
@@ -26,7 +26,7 @@
 	<parent>
 		<groupId>padogrid.addon</groupId>
 		<artifactId>padogrid-all</artifactId>
-		<version>0.9.32-SNAPSHOT</version>
+		<version>0.9.32</version>
 	</parent>
 	<artifactId>padogrid-hazelcast-all-4</artifactId>
 	<packaging>jar</packaging>
