--- a/padogrid-deployment/src/main/resources/kafka/apps/stub/pom.xml
+++ b/padogrid-deployment/src/main/resources/kafka/apps/stub/pom.xml
@@ -20,7 +20,7 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.kafka.addon</groupId>
-	<version>0.9.33-SNAPSHOT</version>
+	<version>0.9.33</version>
 	<artifactId>padogrid-stub</artifactId>
 	<packaging>pom</packaging>
 	<name>padogrid-stub</name>
