--- a/padogrid-deployment/src/main/resources/snappydata/docker/compose/template-server-docker-compose.yaml
+++ b/padogrid-deployment/src/main/resources/snappydata/docker/compose/template-server-docker-compose.yaml
@@ -20,7 +20,5 @@
       - bash
       - -c
       - |
-        export LOG_FILE=/padogrid/log/`hostname`.log \
-        && \
-        start server -name=`hostname` -locators=locator:$LOCATOR_PORT -classpath=/padogrid/plugins/*:/padogrid/lib/* -log-file=/padogrid/log/`hostname`.log -member-timeout=120000 -thrift-server-port=$THRIFT_SERVER_PORT -spark.ui.port=$SPARK_UI_PORT -heap-size=$HEAP_SIZE -statistic-archive-file=/padogrid/stats/`hostname`.gfs -J-Dlog4j.configurationFile=/padogrid/etc/log4j2.properties -J-Xloggc:/padogrid/log/`hostname`-gc.log -J-XX:+PrintGCDetails -J-XX:+PrintGCDateStamps -J-DgemfirePropertyFile=/padogrid/etc/gemfirexd.properties -J-javaagent:/padogrid/lib/${PROMETHEUS_JAR}=$PROMETHEUS_PORT:/padogrid/etc/prometheus.yml -client-port=$CLIENT_PORT
+        start server -name=`hostname` -locators=locator:$LOCATOR_PORT -classpath=/padogrid/plugins/*:/padogrid/lib/* -log-file=$(hostname) -member-timeout=120000 -thrift-server-port=$THRIFT_SERVER_PORT -spark.ui.port=$SPARK_UI_PORT -heap-size=$HEAP_SIZE -statistic-archive-file=/padogrid/stats/`hostname`.gfs -J-Dlog4j.logfile=/padogrid/log/$(hostname).log -J-Dlog4j.configurationFile=/padogrid/etc/log4j2.properties -J-Xloggc:/padogrid/log/`hostname`-gc.log -J-XX:+PrintGCDetails -J-XX:+PrintGCDateStamps -J-DgemfirePropertyFile=/padogrid/etc/gemfirexd.properties -J-javaagent:/padogrid/lib/${PROMETHEUS_JAR}=$PROMETHEUS_PORT:/padogrid/etc/prometheus.yml -client-port=$CLIENT_PORT
     restart: on-failure
