--- a/padogrid-all/padogrid-hazelcast-all-5/pom.xml
+++ b/padogrid-all/padogrid-hazelcast-all-5/pom.xml
@@ -26,7 +26,7 @@
 	<parent>
 		<groupId>padogrid.addon</groupId>
 		<artifactId>padogrid-all</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>1.0.0</version>
 	</parent>
 	<artifactId>padogrid-hazelcast-all-5</artifactId>
 	<packaging>jar</packaging>
