--- a/padogrid-deployment/src/main/resources/hadoop/apps/stub/pom.xml
+++ b/padogrid-deployment/src/main/resources/hadoop/apps/stub/pom.xml
@@ -21,7 +21,7 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.hadoop.addon</groupId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<artifactId>hadoop-addon-stub</artifactId>
 	<packaging>pom</packaging>
 	<name>hadoop-addon-stub</name>
