--- a/padogrid-deployment/src/main/resources/none/apps/stub/pom.xml
+++ b/padogrid-deployment/src/main/resources/none/apps/stub/pom.xml
@@ -21,7 +21,7 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>padogrid.addon</groupId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<artifactId>padogrid-addon-stub</artifactId>
 	<packaging>pom</packaging>
 	<name>padogrid-addon-stub</name>
