--- a/padogrid-deployment/pom.xml
+++ b/padogrid-deployment/pom.xml
@@ -22,7 +22,7 @@
 	<parent>
 		<groupId>padogrid.addon</groupId>
 		<artifactId>padogrid-parent</artifactId>
-		<version>1.0.1-SNAPSHOT</version>
+		<version>1.0.1</version>
 	</parent>
 	<artifactId>padogrid-deployment</artifactId>
 	<name>padogrid-deployment</name>
