--- a/padogrid-deployment/src/main/resources/coherence/apps/stub/pom.xml
+++ b/padogrid-deployment/src/main/resources/coherence/apps/stub/pom.xml
@@ -24,7 +24,7 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.oracle.coherence.addon</groupId>
-	<version>1.0.1-SNAPSHOT</version>
+	<version>1.0.1</version>
 	<artifactId>coherence-addon-perf_test</artifactId>
 	<packaging>pom</packaging>
 	<name>${project.artifactId}</name>
