--- a/padogrid-deployment/src/main/resources/geode/apps/perf_test/pom.xml
+++ b/padogrid-deployment/src/main/resources/geode/apps/perf_test/pom.xml
@@ -21,7 +21,7 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.geode.addon</groupId>
-	<version>1.0.1-SNAPSHOT</version>
+	<version>1.0.1</version>
 	<artifactId>geode-addon-perf_test</artifactId>
 	<packaging>pom</packaging>
 	<name>geode-addon-perf_test</name>
