--- a/padogrid-deployment/src/main/resources/spark/apps/stub/pom.xml
+++ b/padogrid-deployment/src/main/resources/spark/apps/stub/pom.xml
@@ -14,7 +14,7 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.apache.spark.addon</groupId>
-	<version>1.0.1-SNAPSHOT</version>
+	<version>1.0.1</version>
 	<artifactId>spark-addon-stub</artifactId>
 	<packaging>pom</packaging>
 	<name>spark-addon-stub</name>
