--- a/redisson-addon-core/pom.xml
+++ b/redisson-addon-core/pom.xml
@@ -23,7 +23,7 @@
 	<parent>
 		<groupId>padogrid.addon</groupId>
 		<artifactId>padogrid-parent</artifactId>
-		<version>1.0.1-SNAPSHOT</version>
+		<version>1.0.1</version>
 	</parent>
 	<artifactId>redisson-addon-core</artifactId>
 	<packaging>jar</packaging>
