--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,7 @@
 				<module>padogrid-common</module>
 				<module>padogrid-tools</module>
 				<module>geode-addon-core</module>
+				<module>geode-addon-core-tests</module>
 				<module>hazelcast-addon-common</module>
 				<module>hazelcast-addon-core-3</module>
 				<module>hazelcast-addon-core-4</module>
