--- a/hazelcast-addon-core-5/pom.xml
+++ b/hazelcast-addon-core-5/pom.xml
@@ -23,7 +23,7 @@
 	<parent>
 		<groupId>padogrid.addon</groupId>
 		<artifactId>padogrid-parent</artifactId>
-		<version>1.0.2-SNAPSHOT</version>
+		<version>1.0.2</version>
 	</parent>
 	<artifactId>hazelcast-addon-core-5</artifactId>
 	<packaging>jar</packaging>
