--- a/padogrid-all/padogrid-redisson-all/pom.xml
+++ b/padogrid-all/padogrid-redisson-all/pom.xml
@@ -26,7 +26,7 @@
 	<parent>
 		<groupId>padogrid.addon</groupId>
 		<artifactId>padogrid-all</artifactId>
-		<version>1.0.2-SNAPSHOT</version>
+		<version>1.0.2</version>
 	</parent>
 	<artifactId>padogrid-redisson-all</artifactId>
 	<packaging>jar</packaging>
