--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 	<artifactId>padogrid-parent</artifactId>
 	<packaging>pom</packaging>
 	<name>padogrid-parent</name>
-	<version>1.0.2-SNAPSHOT</version>
+	<version>1.0.2</version>
 	<description>padogrid data grid management addons and tools</description>
 
 	<properties>
