--- a/padogrid-deployment/src/main/resources/geode/apps/grafana/etc/locator-mygemfire-targets.yml
+++ b/padogrid-deployment/src/main/resources/geode/apps/grafana/etc/locator-mygemfire-targets.yml
@@ -1,3 +1,3 @@
-- targets: [padogrid:8191, padogrid:8192, padogrid:8193]
+- targets: [HOST-ADDRESS:8191, HOST-ADDRESS:8192, HOST-ADDRESS:8193]
   labels:
     member_type: 'locator'
