--- a/padogrid-deployment/src/main/resources/geode/apps/grafana/etc/mygemfire-targets.yml
+++ b/padogrid-deployment/src/main/resources/geode/apps/grafana/etc/mygemfire-targets.yml
@@ -1,3 +1,3 @@
-- targets: [localhost:8091, localhost:8092, localhost:8093, localhost:8094, localhost:8095, localhost:8096, localhost:8097, localhost:8098, localhost:8099, localhost:8100]
+- targets: [HOST-ADDRESS:8091, HOST-ADDRESS:8092, HOST-ADDRESS:8093, HOST-ADDRESS:8094, HOST-ADDRESS:8095, HOST-ADDRESS:8096, HOST-ADDRESS:8097, HOST-ADDRESS:8098, HOST-ADDRESS:8099, HOST-ADDRESS:8100]
   labels:
     member_type: 'server'
