--- a/padogrid-deployment/src/main/resources/geode/apps/grafana/etc/mygemfire2-targets.yml
+++ b/padogrid-deployment/src/main/resources/geode/apps/grafana/etc/mygemfire2-targets.yml
@@ -1,3 +1,3 @@
-- targets: [localhost:8291, localhost:8292, localhost:8293, localhost:8294, localhost:8295, localhost:8296, localhost:8297, localhost:8298, localhost:8299, localhost:8300]
+- targets: [HOST-ADDRESS:8291, HOST-ADDRESS:8292, HOST-ADDRESS:8293, HOST-ADDRESS:8294, HOST-ADDRESS:8295, HOST-ADDRESS:8296, HOST-ADDRESS:8297, HOST-ADDRESS:8298, HOST-ADDRESS:8299, HOST-ADDRESS:8300]
   labels:
     member_type: 'server'
